data mappies enabled

--- a/docker-compose/teamcity.yaml
+++ b/docker-compose/teamcity.yaml
@@ -4,9 +4,9 @@ services:
   tcserver:
     image: jetbrains/teamcity-server
     restart: always
-    # volumes:
-    #   - ./data:/data/teamcity_server/datadir
-    #   - ./logs:/opt/teamcity/logs
+    volumes:
+      - ./data:/data/teamcity_server/datadir
+      - ./logs:/opt/teamcity/logs
     ports:
       - 8111:8111
   tcagent1:
